# Resilynx

./: .gitignore  PRD.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  turbo.json
.pi-subagents/artifacts/: c696c726-0784-41cf-9ff2-7dac05ee9365_worker_0_input.md  c696c726-0784-41cf-9ff2-7dac05ee9365_worker_0_meta.json  c696c726-0784-41cf-9ff2-7dac05ee9365_worker_0_output.md  c696c726-0784-41cf-9ff2-7dac05ee9365_worker_0_transcript.jsonl  c696c726-0784-41cf-9ff2-7dac05ee9365_worker_1_input.md  c696c726-0784-41cf-9ff2-7dac05ee9365_worker_1_meta.json  c696c726-0784-41cf-9ff2-7dac05ee9365_worker_1_output.md  c696c726-0784-41cf-9ff2-7dac05ee9365_worker_1_transcript.jsonl  c696c726-0784-41cf-9ff2-7dac05ee9365_worker_2_input.md  c696c726-0784-41cf-9ff2-7dac05ee9365_worker_2_meta.json  c696c726-0784-41cf-9ff2-7dac05ee9365_worker_2_output.md  c696c726-0784-41cf-9ff2-7dac05ee9365_worker_2_transcript.jsonl  c696c726-0784-41cf-9ff2-7dac05ee9365_worker_3_input.md  c696c726-0784-41cf-9ff2-7dac05ee9365_worker_3_meta.json  c696c726-0784-41cf-9ff2-7dac05ee9365_worker_4_input.md  (+8 more)
.playwright-cli/: page-2026-07-17T21-27-30-045Z.yml  page-2026-07-17T21-30-16-181Z.yml
apps/nexla-service/: package.json  pyproject.toml
apps/nexla-service/src/nexla_service/: __init__.py  nexla_client.py  resolver.py  server.py
apps/nexla-service/tests/: test_standardize.py
config/: backups.json  nexla-resources.example.json  providers.json
docs/: audit-fix-plan.md  build-plan.md  demo-script.md  implementation-plan.md  productionization-plan.md
scripts/: dev.ps1  nexla-bootstrap.ts
(+39 files in other folders)
