[project]
name = "nexla-service"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexla_service"]
